--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -40,6 +40,10 @@
     margin: auto;
 }
 
+.main-logo-mob{
+    display: none;
+}
+
 .search-bar .MuiSvgIcon-root{
     width: 38px;
     height: 100%;
@@ -101,9 +105,80 @@
 
 .nav-acc-items{
     transition: 0.2s;
+    display: flex;
+    justify-content: center;
+    align-items: start;
 }
 
 .nav-acc-items > svg:hover{
     color: var(--color-dark);
     cursor: pointer;
+}
+
+.cart-items-count{
+    margin-bottom: 10px;
+    line-height: 0px;
+    color: white;
+    font-weight: 600;
+}
+
+.nav-main-home-top{
+    display: none ;
+}
+
+@media (max-width:1150px){
+    .nav-right{
+        gap: 0.3rem;
+    }
+    .nav-cat-items {
+        padding: 10px 10px;
+    }
+}
+
+@media (max-width:800px){
+
+    .navbar-wrapper{
+        padding: 0 4px;
+    }
+
+    .nav-main-categories{
+        display: none;
+    }
+
+
+
+    .nav-acc-item-wishlist{
+        display: none;
+    }
+
+    .nav-account-info-container {
+        gap: 0;
+    }
+
+    .nav-main-home-top{
+        display: flex;
+        width: 100%;
+        box-shadow: 216px 0px 0px 0px var( --color-border-trans),
+        -203px 0px 0px 0px var( --color-border-trans);
+        background: var( --color-border-trans);
+        color: white;
+    }
+
+
+
+}
+
+@media (max-width:550px){
+    .main-logo-desk{
+        display: none;
+    }
+
+    .main-logo-mob{
+        display: block;
+        padding: 8px;
+    }
+}
+
+@media (max-width:1125px){
+
 }
