--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,12 @@
 
   --color-white-background:white;
 
-  --text-color-primary-black: #2d2525
+  --text-color-primary-black: #2d2525;
+  --text-color-primary-grey: #3f3f3f;
+}
+
+.App{
+  height: 100%;
 }
 
 *{
@@ -37,6 +42,11 @@ a{
   color:inherit;
 }
 
+a:hover{
+  color: var(--text-color-primary-grey);
+  transition: 0.2s;
+}
+
 .login-to-buy{
   display: flex;
   width: 100%;
@@ -47,3 +57,37 @@ a{
   gap: 1rem;
 }
 
+
+h2{
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 0;
+}
+
+h3 {
+  font-size: 1.5rem;
+  margin-bottom: 0;
+}
+
+h4 {
+  font-size: 1rem;
+  font-weight: 600;
+  margin: 2px 0;
+}
+
+h5{
+  margin-bottom: 0;
+}
+
+p{
+  margin-bottom: 0;
+}
+
+.no-items-alert{
+  text-align: center;
+  margin-top: 5rem;
+}
+
+.no-item-alert-wrapper{
+  min-height: 100vh;
+}
