--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -2,7 +2,7 @@
     width: 100%;
     background-color: var(--color-white-background);
     height: 100%;
-    /* border: 3px solid rgb(21, 21, 21); */
+    border: 3px solid rgb(255, 172, 172);
     display: flex;
     flex-direction: column;
     transition: 0.2s;
