--- a/src/components/ProductCat/ProductCat.css
+++ b/src/components/ProductCat/ProductCat.css
@@ -7,7 +7,7 @@
 }
 
 .product-cat {
-    margin: 3.5rem 0;
+    margin: 3.5rem 1rem;
     background-color: #ffcbcb;
     padding: 1rem 0;
     border-radius: 8px;
@@ -19,6 +19,13 @@
 }
 
 @media (max-width:800px) {
+
+    .product-cat{
+        margin: 2rem 0.2rem;
+        padding: 1rem 2px;
+    }
+    
+
     .products-list{
         gap: 0.2rem;
         padding: 0 0px;
