--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -38,6 +38,8 @@
     background: var(--color-background-trans);
     border-radius: 8px;
     padding-bottom: 14px;
+    display: flex;
+    flex-direction: column;
 }
 
 .search-product-card:hover{
