--- a/src/components/ProductPage/ProductPage.css
+++ b/src/components/ProductPage/ProductPage.css
@@ -223,6 +223,10 @@
     width: 100px;
 }
 
+.review-cust-name{
+    font-size: 15px;
+}
+
 @media (max-width:800px) {
     .product-header-section {
         width: 100%;
@@ -236,5 +240,39 @@
 
     .product-main-box {
         width: 100%;
+    }
+
+
+    .product-pictures-box {
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .photos-grid {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+    }
+
+    .photo-wrapper {
+        width: 11%;
+    }
+
+    .main-photo {
+        width: 100%;
+    }
+
+    .buy-section {
+        justify-content: center;
+    }
+
+    .product-main-box {
+        padding: 6px;
+    }
+
+    .customer-reviews-section {
+        margin-top: 3rem;
     }
 }
