--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -95,6 +95,17 @@
     color: red;
 }
 
+.loading{
+    width: 100%;
+    grid-column: span 4;
+}
+
+.loading>img{
+    width: 10%;
+    margin: auto;
+    display: block;
+}
+
 @media (max-width:740px) {
 
     .search-products-list{
@@ -142,5 +153,7 @@
     .rating-sort-box{
         gap: 1px;
     }
+
+
 
 }
